--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         
         <div class="contact-form">
             <p>if you want to get in touch, or need help with something i've built, plz reach out!</p>
-            <form action="http://formspree.io/martinmaly66@hotmail.com" method="POST">
+            <form action="https://formspree.io/f/mzzpgyje" method="POST">
                 <input type="email" name="_replyto" placeholder="Your email" required>
                 <textarea name="body" placeholder="Your message" required></textarea>
                 <input type="submit" value="Send">
