--- a/index.html
+++ b/index.html
@@ -55,14 +55,22 @@
         .contact-form h2 {
             margin-top: 0;
         }
+        .contact-form p:first-child {
+            margin-top: -5px;
+        }
         .contact-form input[type="email"],
         .contact-form textarea {
-            width: 100%;
+            width: calc(100% - 20px);
             padding: 10px;
             margin-bottom: 10px;
             background-color: #333;
             border: 1px solid #444;
             color: #fff;
+            border-radius: 4px;
+        }
+        .contact-form textarea {
+            resize: vertical;
+            min-height: 100px;
         }
         .contact-form input[type="submit"] {
             background-color: #444;
@@ -70,6 +78,8 @@
             border: none;
             padding: 10px 20px;
             cursor: pointer;
+            border-radius: 4px;
+            transition: background-color 0.3s ease;
         }
         .contact-form input[type="submit"]:hover {
             background-color: #555;
