--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Martin Maly</title>
+    <title>martin</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -67,6 +67,8 @@
             border: 1px solid #444;
             color: #fff;
             border-radius: 4px;
+            font-family: Arial, sans-serif; /* Match the body font */
+            font-size: 1em; /* Match the body font size */
         }
         .contact-form textarea {
             resize: vertical;
@@ -80,6 +82,8 @@
             cursor: pointer;
             border-radius: 4px;
             transition: background-color 0.3s ease;
+            font-family: Arial, sans-serif; /* Match the body font */
+            font-size: 1em; /* Match the body font size */
         }
         .contact-form input[type="submit"]:hover {
             background-color: #555;
