--- a/index.html
+++ b/index.html
@@ -156,6 +156,9 @@
             <a href="https://www.instagram.com/martinmaly/" target="_blank">
                 <img src="/api/placeholder/32/32" alt="Instagram Logo">
             </a>
+            <a href="https://www.youtube.com/@westmall66" target="_blank">
+                <img src="/api/placeholder/32/32" alt="YouTube Logo">
+            </a>
         </div>
     </div>
 </body>
