Update links color

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             vertical-align: middle;
         }
         a {
-            color: #fff;
+            color: rgb(240, 179, 55);
             text-decoration: underline;
             font-weight: bold;
         }
