--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
         
         <img src="/api/placeholder/800/600" alt="Martin working at his desk">
 
-        <p>in addition to breathplay, here's a few other things he's built recently: <a href="https://youtu.be/oJ2-Ad5lOrA?si=GJQ36DH_UwtQtv82" target="_blank">an animatronic piano player that's controllable through computer vision</a>, <a href="https://apps.apple.com/ca/app/teleport-360-camera/id6476905405" target="_blank">a social media for 360° photos built for vision pro</a>, and a <a href="https://www.youtube.com/watch?v=OpYBEYL9DaQ" target="_blank">a real time salary visualizer built for vision pro</a></p>
+        <p>in addition to breathplay, here's a few other things he's built recently: <a href="https://youtu.be/oJ2-Ad5lOrA?si=GJQ36DH_UwtQtv82" target="_blank">an animatronic piano player</a> that's controllable through computer vision, <a href="https://apps.apple.com/ca/app/teleport-360-camera/id6476905405" target="_blank">a social media for 360° photos</a> built for vision pro, and a <a href="https://www.youtube.com/watch?v=OpYBEYL9DaQ" target="_blank">real time salary visualizer</a> built for vision pro.</p>
 
         <img src="/api/placeholder/800/600" alt="Martin working at his desk">
 
