--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
         <p class="location">currently: north america, canada, ontario, toronto</p>
         
         <div class="callout">
-            <p>martin is an artist, engineer and entrepreneur, currently building <a href="https://apps.apple.com/ca/app/breathplay/id6505010583" target="_blank">breathplay, a gamified breathwork ios app</a>. he has a passion for electronic music, the exploration of consciousness, and blending the world of technology and art.</p>
+            <p>martin is an artist, engineer and entrepreneur, currently building <a href="https://apps.apple.com/ca/app/breathplay/id6505010583" target="_blank">breathplay, a gamified breathwork app</a>. he has a passion for electronic music, the exploration of consciousness, and blending the world of technology and art.</p>
         </div>
         
         <p>born and raised in toronto, he spent his childhood and teenage years playing <a href="https://gthlcanada.com/article/gthl-awards-2017-george-f-dufton-midget-aaa-scholarship-award" target="_blank">high-level hockey and golf</a> while also developing a love for jailbreaking ios devices and tinkering with his macbook. at 18, he was introduced to coding for the first time and decided to pursue learning ios app development.</p>
