--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 </head>
 <body>
     <div class="container">
-        <img src="/api/placeholder/100/100" alt="Martin's profile picture" style="width:100px; height:100px;">
+        <img src="/image/me.jpg" alt="Martin's profile picture" style="width:100px; height:100px;">
         <h1>martin</h1>
         <p class="location">currently: north america, canada, ontario, toronto</p>
         
