--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             max-width: 100%;
             height: auto;
             margin-bottom: 20px;
+            border-radius: 10%
         }
         h1 {
             font-size: 2.5em;
@@ -127,7 +128,7 @@
 </head>
 <body>
     <div class="container">
-        <img src="/image/me.jpg" alt="Martin's profile picture" style="width:100px; height:100px;">
+        <img src="/image/me.jpg" alt="Martin's profile picture" style="width:130px; height:130px;">
         <h1>martin</h1>
         <p class="location">currently: north america, canada, ontario, toronto</p>
         
