--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>martin</title>
@@ -33,7 +34,7 @@
             margin-bottom: 10px;
         }
         p {
-            margin-bottom: 15px;
+            margin-bottom: 22px;
         }
         .location {
             color: #ccc;
@@ -154,9 +155,6 @@
                 <input type="submit" value="Send">
             </form>
         </div>
-
-                <img src="/image/dj.jpg" alt="Martin DJing">
-
       
         <div class="social-links">
             <a href="https://x.com/mountain_mal" target="_blank">
