--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
         }
         .callout {
             background-color: #222;
-            padding: 20px;
+            padding: 10px 20px; 
             margin-bottom: 30px;
             border-radius: 5px;
             font-size: 1em;
