--- a/index.html
+++ b/index.html
@@ -120,11 +120,14 @@
         }
         .callout {
             background-color: #222;
-            padding: 10px 20px; 
+            padding-left: 20px;
+            padding-right: 20px;
+            padding-bottom: 5px; /* Updated bottom padding */
+            padding-top: 10px; /* Updated bottom padding */
             margin-bottom: 30px;
             border-radius: 5px;
             font-size: 1em;
-        }
+        }    
     </style>
 </head>
 <body>
