--- a/index.html
+++ b/index.html
@@ -161,17 +161,17 @@
       
         <div class="social-links">
             <a href="https://x.com/mountain_mal" target="_blank">
-                <img src="/api/placeholder/32/32" alt="Twitter Logo">
+                <img src="/image/x.png" alt="Twitter Logo">
             </a>
             <a href="https://www.instagram.com/martinmaly/" target="_blank">
-                <img src="/api/placeholder/32/32" alt="Instagram Logo">
+                <img src="/image/ig.png" alt="Instagram Logo">
             </a>
             <a href="https://www.youtube.com/@westmall66" target="_blank">
-                <img src="/api/placeholder/32/32" alt="YouTube Logo">
+                <img src="/image/yt.png" alt="YouTube Logo">
             </a>
 
             <a href="https://github.com/martinmaly21" target="_blank">
-                <img src="/api/placeholder/32/32" alt="GitHub Logo">
+                <img src="/image/gh.png" alt="GitHub Logo">
             </a>
         </div>
     </div>
