--- a/index.html
+++ b/index.html
@@ -106,9 +106,10 @@
             opacity: 0.8;
         }
         .social-links img {
-            width: 32px;
-            height: 32px;
+            width: 100%;
+            height: 26px;
             vertical-align: middle;
+            object-fit: cover;
         }
         a {
             color: rgb(240, 179, 55);
