--- a/index.html
+++ b/index.html
@@ -106,10 +106,9 @@
             opacity: 0.8;
         }
         .social-links img {
-            width: 100%;
-            height: 26px;
+            height: 22px;
             vertical-align: middle;
-            object-fit: cover;
+            object-fit: contain;
         }
         a {
             color: rgb(240, 179, 55);
