--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
     <div class="container">
         <img src="/image/me.jpg" alt="Martin's profile picture" style="width:130px; height:130px;">
         <h1>martin</h1>
-        <p class="location">currently: north america, united states, san francisco</p>
+        <p class="location">currently: north america, canada, toronto</p>
         
         <div class="callout">
             <p>martin is an artist, engineer and entrepreneur, currently building <a href="https://apps.apple.com/ca/app/breathplay/id6505010583" target="_blank">a gamified breathwork app</a>. he has a passion for electronic music, the exploration of consciousness, and blending the world of technology and art.</p>
